  * Allow pages that are declared plugin_is_install to process other steps
    in process_step in addition to the install behaviors.
  * Add a try/except guard around the fetch of oem-config/extra_packages.
  * Add oem-config/late-command for cleaning up any preparation that was
    done via oem-config/early-command for the oem-config run.

  [ Evan Dandrea ]
  * Add oem-config/repository and oem-config/key, which respectively
    specify an additional repository to install packages from and a
    public key that the packages are signed with.
  * Copy all oem-config/* templates to the installed system.
  * Add an additional package (oem-config-remaster) to remaster an
    Ubuntu ISO with additional packages and oem-config preseed data.

  [ Colin Watson ]
  * Drop code to remove broken CD-ROM entries from /etc/fstab after install;
    partman-target 64ubuntu6 no longer writes removable device entries to
    /etc/fstab.

 -- Mario Limonciello <mario_limonciello@dell.com>  Mon, 01 Feb 2010 12:10:47 -0600

ubiquity (2.1.15) lucid; urgency=low

  [ Mario Limonciello ]
  * Add a new template, ubiquity/only-show-installable-languages for modifying
    the behavior of what languages to offer on an invokation based upon
    what's installed or "available" to install according to an apt cache.
  * Expose extra functions get and substitute to plugins via it's
    second argument (currently called Progress).
  * Drop extraneous handlers from Mythbuntu pages.
  * Move all handlers from mythbuntu_ui directly into plugins themselves.
  * Move some functions from the install.py script into a new file,
    install_misc.  The intention here is that they can then be used more
    directly by ubiquity plugins.
  * Add a new method for package removals to install_misc to allow
    plugins to mark packages to be removed later in remove_extras.
  * Modify the Mythbuntu services plugin to not even offer VNC if a short
    pw. (LP: #469312)