@@ -27,125 +27,117 @@
       </object>
       <packing>
         <property name="expand">False</property>
-        <property name="fill">False</property>
         <property name="padding">6</property>
         <property name="position">1</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkLabel" id="setup_description">
+        <property name="width_request">600</property>
+        <property name="visible">True</property>
+        <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+        <property name="xalign">0</property>
+        <property name="yalign">1</property>
+        <property name="ypad">25</property>
+        <property name="label" translatable="yes">Users in North America will need to setup an account with Schedules Direct (SD).  SD provides guide data for a nominal fee.  Without SD, North American users may lose many of the scheduling features in MythTV.</property>
+        <property name="wrap">True</property>
+      </object>
+      <packing>
+        <property name="expand">False</property>
+        <property name="fill">False</property>
+        <property name="position">2</property>
       </packing>
     </child>
     <child>
       <object class="GtkVBox" id="vbox11">
         <property name="visible">True</property>
         <property name="orientation">vertical</property>
-        <property name="spacing">24</property>
+        <property name="spacing">15</property>
         <child>
-          <object class="GtkLabel" id="setup_description">
-            <property name="width_request">600</property>
+          <object class="GtkAlignment" id="alignment1">
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">The final steps of the installation require setting up your guide data and configuring the backend for the first time.</property>
-            <property name="wrap">True</property>
+            <property name="xscale">0</property>
+            <child>
+              <object class="GtkLinkButton" id="schedulesdirect">
+                <property name="label" translatable="yes">Click to open the Schedules Direct Website</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="relief">none</property>
+                <property name="xalign">0</property>
+                <property name="uri">http://www.schedulesdirect.org/</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="vbox15">
+          <object class="GtkLabel" id="schedulesdirect_description">
+            <property name="width_request">550</property>
             <property name="visible">True</property>
             <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-            <property name="orientation">vertical</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes">Users in North America will need to setup an account with Schedules Direct (SD).  SD provides guide data for a nominal fee.  Without SD, North American users may lose many of the scheduling features in MythTV.</property>
+            <property name="use_markup">True</property>
+            <property name="wrap">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkAlignment" id="alignment3">
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="xalign">0</property>
+            <property name="xscale">0</property>
             <child>
-              <object class="GtkAlignment" id="alignment1">
+              <object class="GtkButton" id="myth_button">
+                <property name="label" translatable="yes">Launch MythTV-Setup</property>
                 <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="xalign">0</property>
-                <property name="xscale">0</property>
-                <child>
-                  <object class="GtkLinkButton" id="schedulesdirect">
-                    <property name="label" translatable="yes">Click to open the Schedules Direct Website</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="relief">none</property>
-                    <property name="xalign">0</property>
-                    <property name="uri">http://www.schedulesdirect.org/</property>
-                  </object>
-                </child>
+                <signal name="clicked" handler="do_mythtv_setup"/>
               </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="schedulesdirect_description">
-                <property name="width_request">600</property>
-                <property name="visible">True</property>
-                <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="xalign">0</property>
-                <property name="xpad">60</property>
-                <property name="label" translatable="yes">Users in North America will need to setup an account with Schedules Direct (SD).  SD provides guide data for a nominal fee.  Without SD, North American users may lose many of the scheduling features in MythTV.</property>
-                <property name="use_markup">True</property>
-                <property name="wrap">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkAlignment" id="alignment3">
-                <property name="visible">True</property>
-                <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="xalign">0</property>
-                <property name="xscale">0</property>
-                <child>
-                  <object class="GtkButton" id="myth_button">
-                    <property name="label" translatable="yes">Launch MythTV-Setup</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="receives_default">True</property>
-                    <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                    <signal name="clicked" handler="do_mythtv_setup"/>
-                  </object>
-                </child>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="position">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="myth_button_description">
-                <property name="width_request">600</property>
-                <property name="visible">True</property>
-                <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
-                <property name="xalign">0</property>
-                <property name="xpad">60</property>
-                <property name="label" translatable="yes">After setting up your guide data source, you will need to launch MythTV-Setup to run the backend configuration for the first time.  You will need to configure the first four sections, being sure to provide your guide data during the third.</property>
-                <property name="use_markup">True</property>
-                <property name="wrap">True</property>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">3</property>
-              </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="position">1</property>
+            <property name="fill">False</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkLabel" id="myth_button_description">
+            <property name="width_request">550</property>
+            <property name="visible">True</property>
+            <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+            <property name="xalign">0</property>
+            <property name="label" translatable="yes">After setting up your guide data source, you will need to launch MythTV-Setup to run the backend configuration for the first time.  You will need to configure the first four sections, being sure to provide your guide data during the third.</property>
+            <property name="use_markup">True</property>
+            <property name="wrap">True</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="expand">False</property>
-        <property name="padding">6</property>
-        <property name="position">2</property>
+        <property name="fill">False</property>
+        <property name="padding">30</property>
+        <property name="position">3</property>
       </packing>
     </child>
   </object>
